added menu item

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <li class="menu-item">Accounts</li>
       <li class="menu-item">Profile</li>
       <li class="menu-item">Settings</li>
+      <li class="menu-item">Contact us</li>
     </ul>
   </body>
 </html>
